--- a/src/components/sections/CallToActionBanner.css
+++ b/src/components/sections/CallToActionBanner.css
@@ -170,24 +170,32 @@
     font-size: 0.95rem;
   }
 }
-@media screen and (max-width: 350px) {
+/* Additional responsive adjustments for smaller screens */
+@media (max-width: 660px) {
   .cta-image-content {
-    right: -15%;
+    right: 15%;
   }
 }
-@media screen and (max-width: 400px) {
+
+@media (max-width: 480px) {
   .cta-image-content {
-    right: -5%;
+    right: 10%;
+  }
+  
+  .cta-person-image {
+    width: 280px;
+    height: 340px;
   }
 }
-@media screen and (max-width: 480px) {
+
+@media (max-width: 400px) {
   .cta-image-content {
-    right: 5%;
+    right: 10%;
   }
-}
-@media  screen and (max-width: 660px) {
-  .cta-image-content {
-    right: 20%;
+  
+  .cta-person-image {
+    width: 280px;
+    height: 340px;
   }
 }
 
