--- a/src/components/sections/KeyFeaturesSection.css
+++ b/src/components/sections/KeyFeaturesSection.css
@@ -156,7 +156,7 @@
   }
   
   .key-feature-card {
-    padding: 1.5rem;
+    padding: 1rem;
   }
   
   .key-features-buttons {
@@ -167,6 +167,23 @@
   }
   .key-features-button.secondary {
     width: 100%;
+  }
+  .key-feature-title {
+    font-size: 20px;
+    font-weight: 600;
+    color: #49484D;
+    margin: 0 0 1rem 0;
+    line-height: 100%;
+    width: 100%;
+    font-family: var(--font-gilroy);
+  }
+  .key-feature-description {
+    font-size: 16px;
+    color: #49484D;
+    line-height: 100%;
+    margin: 0;
+    width: 100%;
+    font-family: var(--font-gilroy);
   }
 }
 
