--- a/src/components/sections/ThreeDecadesSection.css
+++ b/src/components/sections/ThreeDecadesSection.css
@@ -66,7 +66,6 @@
   margin-bottom: 24px;
   display: flex;
   border-radius: 12px;
-  
 }
 
 .feature-content {
@@ -208,6 +207,11 @@
     font-family: var(--font-gilroy);
     color: #49484D;
     max-width: 100%;
+  }
+  .feature-icon-container {
+    margin-bottom: 0px;
+    display: flex;
+    border-radius: 12px;
   }
   
   .three-decades-features {
