--- a/src/components/sections/BusinessBenefits.css
+++ b/src/components/sections/BusinessBenefits.css
@@ -222,5 +222,16 @@
     width: 100%;
     justify-content: center;
   }
+  .benefit-highlight {
+    font-size: 14px;
+    font-weight: 600;
+    color: #49484D;
+    background-color: #ffffff;
+    border: 1px solid #E3E6EA;
+    border-radius: 24px;
+    padding: 10px;
+    font-family: var(--font-gilroy);
+    width: fit-content;
+  }
 }
 
