--- a/src/components/layout/Navigation.css
+++ b/src/components/layout/Navigation.css
@@ -144,6 +144,23 @@
     display: flex;
     align-items: center;
   }
+  .mobile-nav-item-active::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 6%;
+    transform: translateX(-50%);
+    height: 2px;
+    width: 16px;
+    background: linear-gradient(90deg, #4068FC 0%, #60B8FF 100%);
+    border-radius: 9999px;
+    transition: all 0.3s ease-in-out;
+  }
+  .mobile-nav-item:hover::after {
+    width: 16px;
+    left: 6%;
+    transform: translateX(-50%);
+  }
   
   .mobile-nav-item:last-child,
   .mobile-nav-item-active:last-child {
@@ -238,6 +255,25 @@
     padding: 0;
     cursor: pointer;
     transition: all 0.3s ease;
+  }
+  @media screen and (max-width: 768px) {
+    .mobile-nav-item-active::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 8%;
+    transform: translateX(-50%);
+    height: 2px;
+    width: 16px;
+    background: linear-gradient(90deg, #4068FC 0%, #60B8FF 100%);
+    border-radius: 9999px;
+    transition: all 0.3s ease-in-out;
+  }
+  .mobile-nav-item:hover::after {
+    width: 16px;
+    left: 8%;
+    transform: translateX(-50%);
+  }
   }
   
 }
