fixed design issues

--- a/src/components/sections/CallToActionBanner.css
+++ b/src/components/sections/CallToActionBanner.css
@@ -13,7 +13,7 @@
 .cta-banner-content {
   background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
   border-radius: 20px;
-  padding: 3rem;
+  padding: 6rem 3rem;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -30,13 +30,13 @@
   max-width: 55%;
 }
 
-.cta-title {
+.banner-cta-title {
   font-size: 36px;
   font-weight: 600;
   color: white;
-  line-height: 1.2;
+  line-height: 100%;
   margin: 0 0 2rem 0;
-  font-family: 'Gilroy-Bold', sans-serif;
+  font-family: var(--font-gilroy);
 }
 
 .cta-primary {
@@ -55,13 +55,12 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 .contact-cta-button {
-  padding: 0.875rem 1.75rem;
   font-size: 16px;
   background: white;
   color: #49484D;
   border: none;
   border-radius: 12px;
-  padding: 14px 16px;
+  padding: 12px 20px;
   font-weight: 500;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -74,17 +73,17 @@
   right: 0;
   bottom: 0;
   z-index: 2;
-  width: 400px;
-  height: 350px;
+  width: 391px;
+  height: 496px;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
 }
 
 .cta-person-image {
-  width: 400px;
-  height: auto;
-  object-fit: contain;
+  width: 100%;
+  height: 91%;
+  object-fit: fill;
   object-position: bottom right;
 }
 
@@ -98,7 +97,7 @@
   .cta-banner-content {
     background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
     border-radius: 20px;
-    padding: 3rem;
+    padding: 5rem 3rem 5rem 3rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -108,17 +107,17 @@
   }
   .cta-image-content {
     position: absolute;
-    right: 0;
+    right: -48px;
     bottom: 0;
     z-index: 2;
-    width: 400px;
-    height: 350px;
+    width: 391px;
+    height: 491px;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
   }
-  .cta-title {
-    font-size: 28px;
+  .banner-cta-title {
+    font-size: 36px;
   }
   
   
@@ -158,7 +157,7 @@
     
   }
   
-  .cta-title {
+  .banner-cta-title {
     font-size: 28px;
     margin-bottom: 1.5rem;
     font-weight: 600;
@@ -168,7 +167,7 @@
     display: flex;
   }
   
-  .cta-title br {
+  .banner-cta-title br {
     display: none;
   }
   
