--- a/src/components/sections/CaseStudiesHeroSection.css
+++ b/src/components/sections/CaseStudiesHeroSection.css
@@ -1,6 +1,6 @@
 .case-studies-hero-section {
   position: relative;
-  min-height: 484px;
+  min-height: 486px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,25 +20,17 @@
   object-fit: cover;
   object-position: center;
   width: 100%;
-  height: 100%;
+  height: 628px !important;
 }
 
-.case-studies-hero-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-}
 
 .case-studies-hero-container {
   position: relative;
   z-index: 3;
   width: 90%;
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 4rem 1rem;
+  margin: 75px 0 auto;
+  padding: 0rem 1rem;
 }
 
 .case-studies-hero-content {
