--- a/src/components/sections/CallToActionBanner.css
+++ b/src/components/sections/CallToActionBanner.css
@@ -13,7 +13,7 @@
 .cta-banner-content {
   background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
   border-radius: 20px;
-  padding: 6rem 3rem;
+  padding: 7.2rem 3rem;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -70,10 +70,10 @@
 /* Right Side - Person Image */
 .cta-image-content {
   position: absolute;
-  right: 0;
+  right: -65px;
   bottom: 0;
   z-index: 2;
-  width: 391px;
+  width: 491px;
   height: 496px;
   display: flex;
   align-items: flex-end;
@@ -82,18 +82,76 @@
 
 .cta-person-image {
   width: 100%;
-  height: 91%;
+  height: 100%;
   object-fit: fill;
   object-position: bottom right;
 }
 
 /* Responsive Design */
-@media (max-width: 880px) {
+@media (max-width: 876px) {
   .cta-banner-container {
     max-width: 90%;
     margin: 0 auto;
     padding: 0 2rem;
   }
+  .cta-banner-content {
+    background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
+    border-radius: 20px;
+    padding: 6rem 3rem 6rem 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    overflow: visible;
+    min-height: 280px;
+  }
+  .cta-image-content {
+    position: absolute;
+    right: -75px;
+    bottom: 0;
+    z-index: 2;
+    width: 491px;
+    height: 491px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+  .cta-person-image{
+    width: 100%;
+    height: 100%;
+  }
+  .banner-cta-title {
+    font-size: 36px;
+  }
+  
+  
+}
+@media (max-width: 818px) {
+  .cta-banner-content {
+    background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
+    border-radius: 20px;
+    padding: 6rem 3rem 6rem 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    overflow: visible;
+    min-height: 280px;
+  }
+  .cta-image-content {
+    position: absolute;
+    right: -75px;
+    bottom: 0;
+    z-index: 2;
+    width: 491px;
+    height: 491px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+
+}
+@media (max-width: 809px) {
   .cta-banner-content {
     background: linear-gradient(135deg, #4168FC 0%, #72C0FE 100%);
     border-radius: 20px;
@@ -107,20 +165,16 @@
   }
   .cta-image-content {
     position: absolute;
-    right: -48px;
+    right: -75px;
     bottom: 0;
     z-index: 2;
-    width: 391px;
+    width: 491px;
     height: 491px;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
   }
-  .banner-cta-title {
-    font-size: 36px;
-  }
-  
-  
+
 }
 
 @media (max-width: 768px) {
@@ -138,7 +192,7 @@
   }
   .cta-image-content {
     position: absolute;
-    right: 20%;
+    right: 15%;
     bottom: 0;
     z-index: 2;
     height: 391px;
@@ -153,7 +207,7 @@
   
   .cta-banner-content {
     padding: 2rem 1.5rem;
-    height: 550px;
+    height: 600px;
     
   }
   
@@ -172,7 +226,7 @@
   }
   
   .cta-person-image {
-    width: 320px;
+    width: 391px;
     height: 391px;
   }
   
@@ -185,28 +239,33 @@
 /* Additional responsive adjustments for smaller screens */
 @media (max-width: 660px) {
   .cta-image-content {
-    right: 15%;
+    right: 10%;
+  }
+}
+@media (max-width: 570px) {
+  .cta-image-content {
+    right: 3%;
   }
 }
 
 @media (max-width: 480px) {
   .cta-image-content {
-    right: 10%;
+    right: 5%;
   }
   
   .cta-person-image {
-    width: 280px;
+    width: 340px;
     height: 340px;
   }
 }
 
 @media (max-width: 400px) {
   .cta-image-content {
-    right: 10%;
+    right: 0%;
   }
   
   .cta-person-image {
-    width: 280px;
+    width: 340px;
     height: 340px;
   }
 }
