Added some section and fix herosection for homepage

--- a/src/components/sections/ResidentialFAQSection.css
+++ b/src/components/sections/ResidentialFAQSection.css
@@ -17,7 +17,7 @@
 .residential-faq-title {
   font-size: 36px;
   font-weight: 600;
-  color: #1e293b;
+  color: #49484D;
   margin: 0 0 1.5rem 0;
   line-height: 1.2;
   font-family: var(--font-gilroy);
