--- a/src/components/sections/HeroSection.css
+++ b/src/components/sections/HeroSection.css
@@ -3,7 +3,7 @@
 .hero-section {
   position: relative;
   overflow: hidden;
-  max-height: 1058px;
+  height: calc(100vh - 72px);
 }
 
 .background-container {
@@ -20,8 +20,8 @@
 .content-container {
   position: relative;
   margin: 0 auto;
-  padding: 6rem 1rem;
-  height: 870px;
+  padding: 3rem 1rem;
+  height: 100vh;
 }
 
 .main-content {
