--- a/src/components/sections/TestimonialsSection.css
+++ b/src/components/sections/TestimonialsSection.css
@@ -38,7 +38,7 @@
 }
 
 .mobile-duplicate {
-  display: none;
+  display: none !important;
 }
 
 .testimonial-card {
@@ -168,7 +168,7 @@
   }
   
   .mobile-duplicate {
-    display: flex;
+    display: flex !important;
   }
   
   .testimonial-text {
