--- a/src/components/sections/ServicesSection.css
+++ b/src/components/sections/ServicesSection.css
@@ -1,7 +1,7 @@
 /* Services Section Component Styles */
 
 .services-section {
-  padding: 16% 0rem 6rem 0;
+  padding: 6rem 0rem 6rem 0;
 }
 
 .services-container {
