fixed email, footer and favicon issue

--- a/src/components/sections/HeroSection.css
+++ b/src/components/sections/HeroSection.css
@@ -332,7 +332,7 @@
 }
 .sub-heading {
   font-size: 18px;
-  color: #49484D;
+  color: white;
   font-weight: 400;
   line-height: 100%;
   margin-top: 8px;
