--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -15,7 +15,7 @@
 .footer-brand-section {
   display: flex;
   align-items: flex-start;
-  gap: 70%;
+  gap: 45%;
   margin-bottom: 4rem;
 }
 
@@ -31,9 +31,10 @@
 /* Bottom section: Three columns */
 .footer-columns {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 100%;
   margin-bottom: 3rem;
+  gap: 30%;
 }
 
 .logo-image {
